--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,11 @@
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="field">
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "e-mail"%>
+        <%= f.text_field :name, autofocus: true, autocomplete: "name", placeholder: "name"%>
+      </div>
+
+      <div class="field">
+        <%= f.email_field :email, autocomplete: "email", placeholder: "e-mail"%>
       </div>
 
       <div class="field">
