--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Shop Homepage - Start Bootstrap Template</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag params[:controller], media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag 'scaffolds', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -20,29 +27,43 @@
         <a class="navbar-brand" href="<%=products_path%>">SHOPZ</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-              <li class="nav-item"><a class="nav-link active" aria-current="page" href="<%=products_path%>">Home</a></li>
-              <li class="nav-item"><a class="nav-link active" aria-current="page" href="<%=user_session_path%>">user</a></li>
-              <li class="nav-item"><a class="nav-link active" aria-current="page" href="<%=seller_session_path%>">ADM</a></li>
-              <%if seller_signed_in?%>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="<%=new_product_path%>">New item</a></li>
-              <%end%>
-            </ul>
-            <form class="d-flex">
-              <a class="btn btn-outline-dark", href="<%=cart_show_path%>" >
-                <i class="bi-cart-fill me-1"></i>
-                Cart
-                <span class="badge bg-dark text-white ms-1 rounded-pill"><%= session[:cart].count%> </span>
-              </a>
-            </form>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="<%=products_path%>">Home</a></li>
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="<%=seller_session_path%>">ADM</a></li>
+            <%if seller_signed_in?%>
+              <li class="nav-item"><a class="nav-link active" aria-current="page" href="<%=new_product_path%>">New item</a></li>
+            <%end%>
+          </ul>
+
+          <form class="d-flex">
+            <a class="btn btn-outline-dark", href="<%=cart_show_path%>" >
+              <i class="bi-cart-fill me-1"></i>
+              Cart
+              <span class="badge bg-dark text-white ms-1 rounded-pill"><%= session[:cart].count%> </span>
+            </a>
+          </form>
         </div>
+        <ul class="div-li" >
+          <li class ="divider"></li>
+        </ul>
+        <%if user_signed_in?%>
+          <a class="navbar-brand" href="<%=users_show_path%>"><i class="bi bi-person"></i>olá, <%=current_user.name%></a>
+          <ul class="div-li" >
+            <li class ="divider"></li>
+          </ul>
+          <%=link_to destroy_user_session_path,class:"navbar-brand", method: :delete do%>
+           <i class="bi bi-box-arrow-left"></i> exit
+          <%end%>
+        <%else%>
+          <a class="navbar-brand" href="<%=user_session_path%>"><i class="bi bi-person"></i>Login/Register</a>  
+        <%end%>
       </div>
     </nav>
     <%= yield %>
     <%if seller_signed_in?%>
-      <footer class="py-5 bg-danger footer-adm">
+      <footer class="py-5 bg-danger footer-adm footer">
     <%else%>
-      <footer class = "py-5 bg-dark">
+      <footer class = "py-5 bg-dark footer">
     <%end%>
       <div class="container"><p class="m-0 text-center text-white">Copyright &copy; MauMau 2022</p></div>
     </footer>
