--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing Product</h1>
+<section class="py-5">
+  <div class="container px-4 px-lg-5 mt-5">
+    <h1>Editing Product</h1>
 
-<%= render 'form', product: @product %>
+    <%= render 'form', product: @product %>
 
-<%= link_to 'Show', @product, class: "btn btn-outline-dark mt-auto"%> 
-<%= link_to 'Back', products_path, class: "btn btn-outline-dark mt-auto" %>
+    <%= link_to 'Show', @product, class: "btn btn-outline-dark mt-auto"%> 
+  </div>
+</section>
