--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,4 +1,6 @@
-<h1>New Product</h1>
-
+<section class="py-5">
+  <div class="container px-4 px-lg-5 mt-5">
+    <h1>New Product</h1>
+  </div>
+</section>
 <%= render 'form', product: @product %>
-
